# opengm

./: .gitignore  .travis.yml  CMakeLists.txt  ChangeLog.txt  Doxyfile.in  Licence-OpenGM.txt  README.md
src/: CMakeLists.txt
src/converter/: CMakeLists.txt  brain.cxx  matching2opengm-N2N.cxx  matching2opengm.cxx  opengm1TOopengm2.cxx  opengm2uai.cxx  opengm2wudag.cxx  partition2potts.cxx  uai2opengm.cxx
src/examples/: CMakeLists.txt
src/examples/constrained-graphical-models-examples/: CMakeLists.txt  foreground_background_segmentation.cxx
src/examples/image-processing-examples/: CMakeLists.txt  grid_potts.cxx  interpixel_boundary_segmentation.cxx  mymath.hxx  recognition.cxx
src/examples/io-examples/: CMakeLists.txt  io_graphical_model.cxx
src/examples/matlab-examples/: CMakeLists.txt
src/examples/unsorted-examples/: CMakeLists.txt  cplex_inference.cxx  gibbs.cxx  inference_types.cxx  markov-chain.cxx  one_to_one_matching.cxx  quick_start.cxx  space_types.cxx  swendsenwang.cxx
src/interfaces/: CMakeLists.txt
src/interfaces/commandline/: CMakeLists.txt  cmd_interface.hxx  io_cmd.hxx  opengm.cxx
src/interfaces/commandline/double/: CMakeLists.txt  opengm_max_prod.cxx  opengm_min_sum.cxx  opengm_min_sum_libdai.cxx  opengm_min_sum_small.cxx
src/interfaces/common/argument/: argument.hxx  argument_base.hxx  argument_delimiter.hxx  argument_executer.hxx  bool_argument.hxx  double_argument.hxx  float_argument.hxx  int_argument.hxx  marray_argument.hxx  mxArray_argument.hxx  size_t_argument.hxx  string_argument.hxx  vector_argument.hxx
src/interfaces/common/caller/: ad3_caller.hxx  adsal_caller.hxx  alphabetaswap_caller.hxx  alphaexpansion_caller.hxx  alphaexpansionfusion_caller.hxx  astar_caller.hxx  bruteforce_caller.hxx  cgc_caller.hxx  combilp_caller.hxx  daoopt_caller.hxx  dd_base_caller.hxx  dd_bundle_caller.hxx  dd_merit_caller.hxx  dd_subgradient_caller.hxx  fastPD_caller.hxx  fastinf_bp_caller.hxx  fusion_caller.hxx  gcolib_caller.hxx  gibbs_caller.hxx  grante_caller.hxx  graphcut_caller.hxx  greedygremlin_caller.hxx  icm_caller.hxx  infandflip_caller.hxx  inference_caller_base.hxx  intersection_based_caller.hxx  lazyflipper_caller.hxx  libdai_bp_caller.hxx  libdai_double_loop_generalized_bp_caller.hxx  libdai_fractional_bp_caller.hxx  libdai_junctiontree_caller.hxx  libdai_tree_expectation_propagation_caller.hxx  libdai_trwbp_caller.hxx  loc_caller.hxx  lp_inference_caller_base.hxx  lpcplex2_caller.hxx  lpcplex_caller.hxx  lpgurobi2_caller.hxx  lpgurobi_caller.hxx  lsatr_caller.hxx  (+17 more)
src/interfaces/common/io/: interface_base.hxx  io_base.hxx
src/interfaces/common/obsolete/: AStarParser.hxx  AlphaBetaSwapParser.hxx  AlphaExpansionParser.hxx  Argument.hxx  BeliefpropagationParser.hxx  BruteforceParser.hxx  ExpandAndFlipParser.hxx  GraphCutParser.hxx  ICMParser.hxx  InferenceParserBase.hxx  LBPParser.hxx  LazyFlipperParser.hxx  TRBPParser.hxx
src/interfaces/common/parser/: execute_with_type_from_string.hxx  parser_chain.hxx
src/interfaces/matlab/: CMakeLists.txt
src/interfaces/matlab/marray/: marray_load.m  marray_load_hyperslab.m
src/interfaces/matlab/opengm/: CMakeLists.txt
src/interfaces/python/: .gitignore  CMakeLists.txt  test.py
src/interfaces/python/doc/: conf.py
src/interfaces/python/docsrc/: Makefile
src/interfaces/python/examples/: ad3_posteriors.py  add_factors_and_functions.py  add_functions.py  add_multiple_unaries.py  denoise.py  function_generator.py  fusion_moves.py  gm_fix_variables.py  inference_bp.py  inference_fusion_based.py  inference_graphcut.py  inference_icm.py  inference_self_fusion.py  inspect_model.py  interpixel_boundary_segmentation.py  markov_chain.py  new_visitor.py  newinf.py  potts_gui.py  potts_model.py  pure_python_icm.py  python_function.py  python_visitor.py  python_visitor_gui.py  shape_walker.py  super.py  test_fancy_stuff.py  test_reserve.py
src/interfaces/python/opengm/: .gitignore  gil.hxx  (+21 more)
src/legacy_format_converter/: CMakeLists.txt
src/tutorials/: README
src/tutorials/c++/: CMakeLists.txt
src/unittest/: CMakeLists.txt  headertest.sh  test_accessor_iterator.cxx  test_accumulate.cxx  test_canonicalview.cxx  test_discretespaces.cxx  test_explicit_storage.cxx  test_factor.cxx  test_factorgraph.cxx  test_fast_sequence.cxx  test_functions.cxx  test_gm_learning_functions.cxx  test_graphicalmodel.cxx  test_graphicalmodeldecomposer.cxx  test_graphicalmodelmanipulator.cxx  test_gridsearch_learner.cxx  test_indicator_variable.cxx  test_io_hdf5.cxx  test_learnable_functions.cxx  test_learning.cxx  test_linear_constraint.cxx  test_lp_functiontransfer.cxx  test_lp_solver.cxx  test_lweightedsum_of_functions.cxx  test_memoryinfo.cxx  test_memoryusage.cxx  test_operate.cxx  test_operations.cxx  test_partitions.cxx  test_primal_lpbound.cpp  test_random.cxx  test_random_1.cxx  test_randomaccessset.cxx  test_randomlearner.cxx  test_sparsemarray.cxx  test_subsequence_iterator.cxx  test_transportsolver.cpp  test_tribool.cxx  test_type_sizes_for_hdf5.cxx  test_types.cxx
src/unittest/inference/: CMakeLists.txt  test-mrflib  test_2sat.cxx  test_ad3_external.cxx  test_adsal.cxx  test_alphabetaswap.cxx  test_alphaexpansion.cxx  test_alphaexpansionfusion.cxx  test_astar.cxx  test_blocked_solver.cxx  test_bruteforce.cxx  test_cgc.cxx  test_coin_osi.cxx  test_combilp.cxx  test_dualdecomposition.cxx  test_dynamicprogramming.cxx  test_external_libdai.cxx  test_fusion_based_inf.cxx  test_gco.cxx  test_gibbs.cxx  test_graphcut.cxx  test_ibfs.cxx  test_icm.cxx  test_inferencetest.cxx  test_label_permutable_fusion_mover.cxx  test_lazyflipper.cxx  test_libdai.cxx  test_loc.cxx  test_lpcplex.cxx  test_lpcplex2.cxx  test_lpgurobi.cxx  test_lpgurobi2.cxx  test_lsatr.cxx  test_messagepassing.cxx  test_minstcut.cxx  test_movemaker.cxx  test_mplp_external.cxx  test_mqpbo.cxx  test_mrflib.cxx  test_multicut.cxx  (+11 more)
src/unittest/learning/: CMakeLists.txt  test_dataset.cxx  test_dataset_io.cxx  test_generalized_hammingloss.cxx  test_gridsearch_learner.cxx  test_learning.cxx  test_maximum_likelihood_learner.cxx  test_subgradient_ssvm.cxx
(+652 files in other folders)
